--- a/index.html
+++ b/index.html
@@ -10,13 +10,26 @@
 
     <div class="container">
         <div class="destination-container">
-            <div class="destination" id="belize">
-                <h2>Paris</h2>
+            <div class="destination" id="dest1">
+                <h2>Tokyo</h2>
             </div>
 
-            <div class="destination" id="barcelona">
+            <div class="destination" id="dest2">
                 <h2>Berlin</h2>
             </div>
+
+            <div class="destination" id="dest3">
+                <h2>Bahamas</h2>
+            </div>
+
+            <div class="destination" id="dest4">
+                <h2>South Africa</h2>
+            </div>
+
+            <div class="destination" id="dest5">
+                <h2>Istanbul</h2>
+            </div>
+
         </div>
     </div>
 
