--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 <h2>Istanbul</h2>
             </div>
 
+            <div class="destination" id="dest6">
+                <h2>Scotland</h2>
+            </div>
+
         </div>
     </div>
 
