--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 <h2>Scotland</h2>
             </div>
 
+            <div class="destination" id="dest7">
+                <h2>Antalya</h2>
+            </div>
+
         </div>
     </div>
 
